--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
-.navbar{
-    background:transparent;
+.navbar {
+    background-color: transparent;
+    box-shadow: none;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    transition: background-color 0.3s ease;
 }
