--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,6 @@
-.grid-image {
-    width: 100%;
-    max-width: 300px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.container {
+	margin-top: 50px;
 }
-
-
-  
-  .section-description {
-    font-size: 1.25rem;
-    color: #6c757d;
-    margin-bottom: 0;
-  }
-  
+.card-body {
+	padding: 5px;
+}
