--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,13 @@
-.container {
+/* .container {
 	margin-top: 30px;
-}
-.card-body {
+} */
+
+/* .card-body {
 	padding: 5px;
-}
+} */
 
 .form-container {
-    max-width: 100px; /* Adjust the width as needed */
+    max-width: 50px; /* Adjust the width as needed */
     margin: 0 auto; /* Centers the form */
-    padding: 10px; /* Adds spacing */
+    padding: 0; /* Adds spacing */
 }
